# deezer-to-spotify

./: .env.example  .gitignore  Readme.md  pyproject.toml
deezer-to-spotify/: main.py
